[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
pqc_dilithium = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.2" }
hex = "0.4"
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-sol-types = { version = "0.7.2", default-features = false }
