[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "=6.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
sp1-helper = "=6.0.2"
